[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.5",
    "langsmith>=0.8.15",
    "openai>=2.41.1",
    "opensearch-py>=3.2.0",
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]
